<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Complaint Booking</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="password">PASSWORD</string>
    <string name="loginid">LOGIN ID</string>
    <string name="required">required</string>
    <string name="username">username</string>
    <string name="login">Login</string>

</resources>
