<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/greenbackground"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_awesome_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:title="@string/app_name" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_weight="0.5"
        android:background="@color/whiterest"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:paddingTop="20dp"
            android:paddingBottom="3dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginid"
            android:textColor="@color/darkgreen"
            android:fontFamily="sans-serif-medium"
            android:textSize="24sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="@color/darkgreen" />

        <EditText
            android:paddingTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:hint="@string/username"
            android:textSize="16sp"
            android:maxLines="1"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/darkgreen"
            android:text="@string/password"
            android:fontFamily="sans-serif-medium"
            android:textSize="24sp"
            android:paddingBottom="3dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="@color/darkgreen" />

        <EditText
            android:paddingTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:hint="@string/required"
            android:textSize="16sp"
            android:maxLines="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:background="@drawable/button"/>

    </LinearLayout>


</LinearLayout>
